Increased title outline size and fixed footer text color contrast.

--- a/_sass/2-layouts/footer.sass
+++ b/_sass/2-layouts/footer.sass
@@ -7,9 +7,20 @@ body
 		padding: 10px
 		margin-bottom: 200px
 
+		a
+			&:link
+				color: $secondary-color-light
+				text-decoration: none
+			&:visited
+				color: $secondary-color
+				text-decoration: none
+			&:hover
+				color: $secondary-color-light
+				text-decoration: underline
+
 		.copyright
-			color: $primary-color-dark
+			color: $primary-color-light
 			font-size: 0.75rem
 		.attribution
-			color: $primary-color-dark
+			color: $primary-color-light
 			font-size: 0.75rem
