--- a/_sass/2-layouts/header.sass
+++ b/_sass/2-layouts/header.sass
@@ -18,7 +18,7 @@ header
 			margin-top: 0px
 			margin-bottom: 0px
 			color: $primary-color
-			-webkit-text-stroke-width: 0.2rem
+			-webkit-text-stroke-width: 0.3rem
 			-webkit-text-stroke-color: $primary-color-dark
 
 			a:link, a:visited
